Bug 247637 - cursor pointer state inconsistent with keyboard cursor navigation.
Summary: cursor pointer state inconsistent with keyboard cursor navigation.
Status: RESOLVED FIXED
Alias: None
Product: kst
Classification: Applications
Component: plotting (other bugs)
Version First Reported In: 2.0.0
Platform: Unlisted Binaries All
: NOR normal
Target Milestone: 2.0.0
Assignee: kst
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-13 13:01 UTC by Peter Milne
Modified: 2010-11-12 10:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Milne 2010-08-13 13:01:44 UTC
Version:           2.0.0
OS:                All

Default pointer is a cross-hair.

On using cursor keys to navigate:
PAN LEFT, PAN RIGHT : still a cross-hair : good
UP, DOWN : cursor changes to "Up-Down-Arrow", appropriate for vertical axis pan : good

But:
Press SHIFT_LEFT/SHIFT_RIGHT for X_ZOOM : cursor changes to "Up-Down-Arrow" - NOT GOOD!

The X_ZOOM function still works, but the pointer is unhelpful.

Sometimes a horizontal guide-line appears. This doesn't appear to have any function.

On pressing LEFT/RIGHT for PAN-LEFT, PAN-RIGHT, the cursor remains in the "Up-Down-Arrow" state.

However, moving the mouse pointer does cause the cursor to reset to default "Crosshair".



Reproducible: Didn't try

Steps to Reproduce:
Plot a waveform. Use keyboard cursor keys to navigate.


Expected Results:  
To be consistent, the cursor should change to "Left-Right-Arrow" when 
the X ZOOM IN, X ZOOM OUT functions are active. The cursor should reset 
to "Cross Hair" when any of the PAN functions (no-shift L,R,U,D) are 
invoked.



May be related to Bug 247634
Comment 1 Peter Kümmel 2010-09-02 09:52:36 UTC
SVN commit 1170822 by kuemmel:

- switch to cross cursor on modifier release event 
- show selection lines only when one uses the mouse for "X/Y Mouse Zoom"
  http://kst.kde.org/handbook/view-zoomingandscrolling.html

BUG:247637

 M  +1 -4      plotrenderitem.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1170822
Comment 2 Peter Kümmel 2010-09-02 10:06:41 UTC
SVN commit 1170827 by kuemmel:

show cursor as Qt::SizeVerCursor only on mouse events because shift is also used for arrow key controlled zooming

BUG:247637

 M  +3 -1      plotrenderitem.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1170827
Comment 3 Peter Kümmel 2010-11-12 10:42:39 UTC
These bugs are solved with 2.0.0