- switch to cross cursor on modifier release event - show selection lines only when one uses the mouse for "X/Y Mouse Zoom"   http://kst.kde.org/handbook/view-zoomingandscrolling.html

BUG:247637

git-svn-id: svn://anonsvn.kde.org/home/kde/branches/work/kst/portto4/kst@1170822 283d02a7-25f6-0310-bc7c-ecb5cbfe19da